Add initial layout styles.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 		<script src="https://unpkg.com/htmx.org"></script>
 </head>
 <body>
+
+	<h1 class="heading-1">HTMX Examples</h1>
+	<div class="container">
+		
+	</div>
+
 </body>
 </html>
