Add intro, first two examples, example source content, and styles.

--- a/example-content.html
+++ b/example-content.html
@@ -10,5 +10,14 @@
 		<script src="https://unpkg.com/htmx.org"></script>
 </head>
 <body>
+  <h1 class="heading-1">Page With Content</h1>
+
+  <div class="container">
+    <p>This page could function as a normal webpage with <span id="content-item-1">specific content that is loaded as needed and in context on multiple pages.</span></p>
+    <div id="specific-selection">
+      <p>For example, this sentence or any element can be specifically selected using hx-select and an id selector.</p>
+    </div>
+  </div>
+
 </body>
 </html>
