Add CSS animation example.

--- a/example-content.html
+++ b/example-content.html
@@ -14,10 +14,10 @@
 
   <div class="container">
     <p>This page could function as a normal webpage with <span id="content-item-1">specific content that is loaded as needed and in context on multiple pages.</span></p>
-    <div id="specific-selection">
-      <p>For example, this sentence or any element can be specifically selected using hx-select and an id selector.</p>
+    <div id="specific-selection" class="fade-in">
+      <p>For example, this sentence or any element can be specifically selected using <span class="code-examples">hx-select</span> and an id selector.</p>
     </div>
   </div>
-
+  
 </body>
 </html>
