Add to do for head support example

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
 			</div>
 		</div>
 
+		<div class="examples-container">
+			<h2>Head Support Extension</h2>
+			<p>To do: Add extended head support example. <a href="https://htmx.org/extensions/head-support/">https://htmx.org/extensions/head-support/</a></p>
+		</div>
+
+
+
 	</div>
 
 </body>
